# curategpt

./: .codespellrc  .cruft.json  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  adhoc.Makefile  curate_gpt.adhoc.html  curate_gpt.agents.html  curate_gpt.app.html  curate_gpt.conf.html  curate_gpt.conf.prompts.html  curate_gpt.evaluation.html  curate_gpt.extract.html  curate_gpt.formatters.html  curate_gpt.html  curate_gpt.store.html  curate_gpt.utils.html  curate_gpt.views.html  curate_gpt.wrappers.bio.html  curate_gpt.wrappers.clinical.html  curate_gpt.wrappers.general.html  curate_gpt.wrappers.genes.html  curate_gpt.wrappers.html  curate_gpt.wrappers.investigation.html  curate_gpt.wrappers.legal.html  curate_gpt.wrappers.literature.html  curate_gpt.wrappers.ontology.html  curategpt.adhoc.html  curategpt.agents.html  curategpt.app.html  curategpt.conf.html  curategpt.conf.prompts.html  curategpt.evaluation.html  curategpt.extract.html  curategpt.formatters.html  curategpt.html  (+21 more)
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
_sources/: curate_gpt.adhoc.rst.txt  curate_gpt.agents.rst.txt  curate_gpt.app.rst.txt  curate_gpt.conf.prompts.rst.txt  curate_gpt.conf.rst.txt  curate_gpt.evaluation.rst.txt  curate_gpt.extract.rst.txt  curate_gpt.formatters.rst.txt  curate_gpt.rst.txt  curate_gpt.store.rst.txt  curate_gpt.utils.rst.txt  curate_gpt.views.rst.txt  curate_gpt.wrappers.bio.rst.txt  curate_gpt.wrappers.clinical.rst.txt  curate_gpt.wrappers.general.rst.txt  curate_gpt.wrappers.genes.rst.txt  curate_gpt.wrappers.investigation.rst.txt  curate_gpt.wrappers.legal.rst.txt  curate_gpt.wrappers.literature.rst.txt  curate_gpt.wrappers.ontology.rst.txt  curate_gpt.wrappers.rst.txt  curategpt.adhoc.rst.txt  curategpt.agents.rst.txt  curategpt.app.rst.txt  curategpt.conf.prompts.rst.txt  curategpt.conf.rst.txt  curategpt.evaluation.rst.txt  curategpt.extract.rst.txt  curategpt.formatters.rst.txt  curategpt.rst.txt  curategpt.store.rst.txt  curategpt.utils.rst.txt  curategpt.views.rst.txt  curategpt.wrappers.bio.rst.txt  curategpt.wrappers.clinical.rst.txt  curategpt.wrappers.general.rst.txt  curategpt.wrappers.investigation.rst.txt  curategpt.wrappers.legal.rst.txt  curategpt.wrappers.literature.rst.txt  curategpt.wrappers.ontology.rst.txt  (+3 more)
_static/: documentation_options.js
config/: db_config.yaml
docs/: conf.py  index.rst
etc/: azure.toml
notebooks/: Create-terms.ipynb  Dump-collection.ipynb  GitHub-assisted-workflow.ipynb  Index-an-Ontology.ipynb  MAXO-demo.ipynb  NEON-environments.ipynb
notebooks/api/: Search.ipynb
notebooks/command-line/: .gitignore  Index-JSON-Files.ipynb  Index-an-Ontology.ipynb  Index-monarch-kg.ipynb  Subsumption-exp.ipynb  essdive.ipynb
src/: llm_gpt4all.py
src/curate_gpt/: __init__.py  cli.py  main.py
src/curate_gpt/adhoc/: gocam_predictor.py  nmdc_sample_downloader.py
src/curate_gpt/agents/: __init__.py  agent_utils.py  base_agent.py  bootstrap_agent.py  chat.py  chat_agent.py  concept_recognition_agent.py  dac_agent.py  dae_agent.py  dalek.py  dase_agent.py  dragon_agent.py  evidence_agent.py  mapper.py  mapping_agent.py  pubmed.py  rage.py  subsumption_eval_agent.py  summarization_agent.py
src/curate_gpt/app/: app.py  cart.py  cases.yaml  components.py  helper.py
src/curate_gpt/conf/: __init__.py
src/curate_gpt/evaluation/: base_evaluator.py  calc_statistics.py  dae_evaluator.py  evaluation_datamodel.py  runner.py  splitter.py
src/curate_gpt/extract/: __init__.py  basic_extractor.py  extractor.py  openai_extractor.py  recursive_extractor.py
src/curate_gpt/formatters/: __init__.py  format_utils.py
src/curate_gpt/rag/: __init__.py  openai_rag.py  rag.py
src/curate_gpt/store/: __init__.py  chromadb_adapter.py  db_adapter.py  db_config.py  db_metadata.py  duckdb_adapter.py  duckdb_result.py  huggingface_adapter.py  in_memory_adapter.py  metadata.py  schema_manager.py  schema_proxy.py  vocab.py
src/curate_gpt/utils/: azure.py  eval_utils.py  llm_utils.py  metrics.py  patch_utils.py  search.py  tokens.py  vector_algorithms.py  vectordb_operations.py
src/curate_gpt/view/: __init__.py  ontology.yaml  ontology_view.py  view.py
src/curate_gpt/views/: namer.py
src/curate_gpt/virtualstore/: __init__.py  dbview.py  pubmed.py  wikipedia.py
src/curate_gpt/wrappers/: __init__.py  base_wrapper.py
src/curategpt/: __init__.py  cli.py
src/curategpt/adhoc/: gocam_predictor.py
src/curategpt/agents/: agent_utils.py  base_agent.py  bootstrap_agent.py  chat_agent.py  concept_recognition_agent.py  dase_agent.py  dragon_agent.py  evidence_agent.py  huggingface_agent.py  mapping_agent.py  summarization_agent.py
src/curategpt/app/: app.py  app_alz.py  cart.py  helper.py  state.py
src/curategpt/evaluation/: base_evaluator.py  calc_statistics.py  dae_evaluator.py  evaluation_datamodel.py  runner.py  (+1 more)
src/llm/: __init__.py  cli.py  hookspecs.py  models.py  plugins.py  templates.py  utils.py
src/llm_replicate/: __init__.py
tests/: __init__.py  bench.py  demo_test.py
tests/agents/: conftest.py  test_chat.py  test_concept_recognizer.py  test_dac.py  test_dae.py  test_dalek.py  test_dase.py  test_dragon.py  test_mapper.py  test_pubmed.py
tests/cli/: conftest.py  test_chat_cli.py  test_cli.py  test_store_cli.py
tests/evaluation/: conftest.py  test_calculate_statistics.py  test_runner.py
tests/extract/: test_extractor.py
tests/input/: example-phenotype-hpoa.tsv  ncbi-biosample-example.xml
tests/rag/: test_rag.py
tests/rage/: test_rage.py
tests/store/: conftest.py  test_chromadb_adapter.py  test_duckdb_adapter.py  test_in_memory_adapter.py
tests/utils/: helper.py  test_compare.py  test_pydantic.py  test_search.py
tests/view/: test_ontology_view.py
tests/virtualstore/: test_pubmed.py  test_wikipedia.py
tests/wrappers/: test_bioportal.py  test_clinvar.py  test_evidence_agent.py  test_filesystem.py  test_gocam.py  test_hpoa.py  test_json.py  test_linkml_schema.py  test_ncbi_biosample.py  test_oak.py  test_ontology.py  test_pmc.py  test_pubmed.py  test_wikipedia.py
(+106 files in other folders)
