[tool.poetry]
name = "curate-gpt"
version = "0.0.0.post2.dev0+335f59e"
description = "curate-gpt"
authors = ["Author 1 <cjmungall@lbl.gov>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, !=3.9.7"
click = "*"
importlib-metadata = ">=6"
oaklib = ">=0.5.15"
beautifulsoup4 = ">=4.12.2"
streamlit = ">=1.22.0"
openai = ">=0.27.7"
wikipedia = ">=1.4.0"
google-search-results = ">=2.4.2"
chromadb = "^0.4.5"
tiktoken = "^0.4.0"
inflection = ">=0.5.1"
sentence-transformers = ">=2.2.2"
pymongo = ">=4.4.1"
linkml-runtime = "*"
python-ulid = "^1.1.0"
replicate = "^0.11.0"
sqlite-utils = "^3.34"
gpt4all = "^1.0.8"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
tox = ">=3.25.1"
sphinx = {version = ">=6.1.3", extras = ["docs"]}
sphinx-rtd-theme = {version = ">=1.0.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = ">=1.2.0", extras = ["docs"]}
sphinx-click = {version = ">=4.3.0", extras = ["docs"]}
myst-parser = {version = ">=0.18.1", extras = ["docs"]}


[tool.poetry.scripts]
curategpt = "curate_gpt.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]

[tool.poetry.group.dev.dependencies]
linkml = "^1.5.6"
jupyter = "^1.0.0"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

# copied from llm-replicate
[project.entry-points.llm]
replicate = "llm_replicate"
